# dynamic-ocean-fields

./: .env-metadata.json  .gitignore  CREATING_RL_ENV_FOR_PRIME_HUB.md  PRIME_HUB_READY.md  README.md  SETUP_COMPLETE.md  load_environment.py  pyproject.toml  test_load.py  verify_setup.py
dynamic_ocean/: .gitignore  LICENSE  README.md  __init__.py  requirements.txt
dynamic_ocean/agents/: random_agent.py  rl_agent.py
dynamic_ocean/environments/dynamic_ocean_fields/: README.md  load_environment.py  pyproject.toml
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/: main.py
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/agents/: greedy_agent.py
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/configs/: env_config.yaml
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/data/: README.md
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/envs/: __init__.py  cost_functions.py
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/tests/: test_costs.py  test_env.py
dynamic_ocean/environments/dynamic_ocean_fields/dynamic-ocean/utils/: pathfinding.py
dynamic_ocean/envs/: dynamic_ocean_env.py
dynamic_ocean/notebooks/: demo_env.ipynb
dynamic_ocean/utils/: data_loader.py  visualization.py
environments/dynamic-ocean-fields/: README.md  load_environment.py  pyproject.toml
environments/dynamic_ocean_fields/: README.md  load_environment.py  pyproject.toml
