[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_ocean"
version = "0.1.0"
description = "Dynamic Ocean Fields - grid cost routing environment"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ocean", "routing", "rl", "environment"]
authors = [
  { name = "praneet", email = "praneet.3t@gmail.com" }
]

dependencies = [
  "numpy>=1.23",
  "gymnasium==0.28.1",
  "scipy>=1.9",
  "xarray",
  "matplotlib",
  "verifiers"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamic_ocean"]
