[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_ocean_env_template"
version = "0.1.0"
description = "Prime env wrapper for dynamic_ocean (local template)"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "verifiers"
]
