[project]
name = "dynamic-ocean-fields"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.6.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
