[project]
name = "dynamic-ocean-fields"
version = "0.1.0"
description = "Grid-based ocean routing environment (cost-map) for Prime Intellect Environments Hub."
authors = [{name = "praneet", email = "praneet.3t@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"

[project.dependencies]
numpy = ">=1.23"
gymnasium = "==0.28.1"
xarray = "*"
scipy = "*"
verifiers = "*"
